--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "react-router-dom": "^6.24.1",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
-    "three": "^0.166.1"
+    "three": "^0.166.1",
+    "vite-plugin-string": "^1.2.3"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
