--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@react-three/fiber": "^8.16.8",
     "framer-motion": "^11.2.13",
     "maath": "^0.10.7",
+    "magic-string": "^0.30.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
@@ -38,6 +39,7 @@
     "eslint-plugin-react-refresh": "^0.4.7",
     "gh-pages": "^6.1.1",
     "postcss": "^8.4.39",
+    "source-map-explorer": "^2.5.3",
     "tailwindcss": "^3.4.4",
     "vite": "^5.3.1"
   }
