custom domain in package file

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://raghuvartandon15.github.io/portfolio_website",
+  "homepage": "https://raghuvartandon.com/",
   "name": "3d-portfolio",
   "private": true,
   "version": "0.0.0",
